# servoce

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  build_dists.sh  cmake_install.cmake  collect_libs.py  collect_libs.sh  install_manifest.txt  make.py  servoce_inc.py  servoce_test  setup.py
HIDE/: MANIFEST.in
HIDE/test/camera/: main.cpp
HIDE/test/convert/brep/: box.brep  main.cpp
HIDE/test/convert/svg/: main.cpp  make.py
HIDE/test/fillet_face/: main.cpp
HIDE/test/mandisp/: main.h
HIDE/test/prim1d/: make.py
HIDE/test/prim2d/: main.cpp
HIDE/test/text/: main.cpp
HIDE/test/transform/: main.cpp
HIDE/test/translate/: main.cpp
HIDE/test/viewwidget/: make.py
HIDE/test/widget/: main.cpp
HIDE/test/wire/: main.cpp
Testing/Temporary/: CTestCostData.txt
cxxbuild/src/local/: display.h.cxx
expers/brepload/: main.cpp  make.py  model.brep
expers/vec2d/: MyFile  lalal.ps  main.cpp  make.py
include/servoce/: analytic_curve.h  axis.h  boolops.h  boundbox.h  camera.h  color.h  compound.h  compsolid.h  convert.h  coord_system.h  curve2.h  curve3.h  curve_algo.h  display.h  displayable.h  edge.h  face.h  geombase.h  geomprops.h  interactive_object.h  law.h  math3.h  opencascade_types.h  project.h  prs3d.h  scene.h  self_transformable.h  servoce.h  shape.h  shape_view.h  shell.h  solid.h  surface.h  surface_algo.h  sweep.h  test.h  topo.h  trans.h  transformable.h  transformable_impl.h  (+8 more)
include/servoce/HIDE/: widget.h
include/servoce/HIDE/widgets/: gtk_widget.h
include/servoce/linalg/: linalg-ext.h  linalg.h
include/servoce/pywrap/: wire.h
include/servoce/util/: b64.h  math.h  setget.h
pyservoce/: __init__.py  boolean.py  controllers.py  defs.py  display.py  geom.py  kinematic.py  kinsolver.py  mtrans.py  pntvec.py  trace.py  trans.py  view.py
pyservoce/HIDE/: __config__.py  kinematic.py
pytest/: apitest.py  inctest.py  test.py
src/: analytic_curve3.cpp  axis.cpp  b64.cpp  boolops.cpp  boundbox.cpp  camera.cpp  color_py.cpp  convert.cpp  curve2.cpp  curve3.cpp  display.cpp  edge.cpp  face.cpp  geombase.cpp  geombase_py.cpp  geomprops.cpp  interactive_object.cpp  law.cpp  math3.cpp  occversion.cpp  opencascade_types.cpp  project.cpp  prs3d.cpp  pywrap.cpp  scene.cpp  shape.cpp  shape_view.cpp  shell.cpp  solid.cpp  surface.cpp  sweep.cpp  test.cpp  topo.cpp  trans.cpp  triangulation.cpp  vertex.cpp  view.cpp  viewer.cpp  wire.cpp
src/HIDE/shower/HIDE/: dispwidget_qt.cpp
src/HIDE/widgets/: gtk_widget.cpp
src/display/: dispwidget.cpp  dispwidget_qt.cpp  icons.cpp  mainwidget.cpp  q.qrc
src/local/: OccViewContext.h  display.h  display_h_moc.cpp  pywrap_util.h  shower_h_moc.cpp  util.h
src/pywrap/: compound.cpp  coord_system.cpp  curve3.h  curve_algo.h  displayable.cpp  displayable.h  edge.cpp  face.cpp  geombase.cpp  interactive_object.cpp  other.cpp  shape.cpp  shell.cpp  solid.cpp  surface.cpp  sweep.cpp  trans.cpp  transformable.h  wire.cpp  wire.h
src/shower/: display.h  dispwidget.cpp  mainwidget.cpp
src/widgets/: gtk_widget.cpp
test/boolops/: main.cpp  make.py  mirm!
test/camera/: main.cpp
test/convert/svg/: make.py
test/dump/: main.cpp  make.py
test/face/: main.cpp  target
test/fillet_face/: make.py
test/mandisp/: main.cpp  main.h  make.py
test/prim1d/: main.cpp
test/prim2d/: main.cpp  make.py
test/prim3d/: main.cpp  make.py  target
test/qtwidget/: main.cpp  target
test/scale/: main.cpp  make.py
test/scene/: main.cpp
test/section/: main.cpp  make.py
test/solid_boolops/: main.cpp  target
test/sweep/: main.cpp  target
test/test/: main.cpp  target
test/text/: make.py
test/tranlate/: main.cpp  target
test/viewwidget/: main.cpp  make.py
test/widget/: main.cpp
test/wire/: main.cpp  target
third-libs/: clean.py  download_win_occ7.4.py
tools/: __set_occt_paths.py  build_dists.sh  build_dists_win.py  clean.sh  collect_libs.py  libs_clean.sh  reinstall_local.sh  replace_library.sh  set_occt_paths.sh  setup.py
utests/: curve3.cpp  face.cpp  main.cpp  make.py  runtests  solid.cpp  trans.cpp  wire.cpp
